decode/03_javascript-fundamentals/archived/syntax-errors/test/problem3.js
let expect = require('chai').expect;

let f = require('../../src/syntax-errors/problem3.js');

console.log("Everything OK!");